
     * `--rolecontains=ROLE', additionally keep those roles

     * `--rolexclusively=ROLE', delete all roles, that are not covered by a
       startnode or by a containrole, that do not match the set of exclusive
       roles

* Added generation of FINALCONDITION for oWFN output; oWFN ouput now uses
  full node names instead of short node names.

* Made filtering of processes more precise according to the semantics
  implemented in the WebSphere tools: Translation now considers all pin
  multiplicities, and only non-matching pairs of multiplicities (produce one
  token, consume two token) are considered erroneous.

* Extended the translation log file which now distinguishes properties of UML
  processes and of the Petri nets

* Added `--enable-debug' and `--disable-assert' to `./configure' parameters
  to control the use of debug and assert code

* integrated BOM Anonymizer to UML2oWFN distribution (see directory `anon')

Version 1.11
============

* Added new `./scripts/repository/Makefile' for an automated analysis and
  result compilation of several large process suites. See manual on usage.

* Fixed handling of paths for output files, output files can now be written
  to their own directories

* Changed the standard soundness verification procedures to the more efficient
  liveness property verification algorithm of LoLA. To use the old CTL model
  checking procedures use parameter `-p ctl'.

* Cleaned the autotools configuration files and added options to directly
  compile binaries for different platforms.

Version 1.10
============

* fixed a bug in handling filenames, UML2oWFN can now process files in other
  directories than the current working directory

* added parameter `-a orJoin' to translate process for soundness analysis
  assuming an implicit OR-join on the control-flow

* added parameter `-a wfNet' to translate processes into Aalst-workflow-nets,
  the translation assumes an AND-join on all end- and stop-nodes of the
  process
